--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mdi/font": "7.4.47",
     "axios": "^1.13.2",
     "read-excel-file": "^6.0.1",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1",
     "vuetify": "^3.10.1"
